crates/strider/tests/snapshots/v2__ppc32le__memory__array_copy.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "3" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "21" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "23" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "27" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "31" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "35" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "38" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "40" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "40" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "52" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "52" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "46" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "66" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "77" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "77" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "79" -> "77" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "79" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "9" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "82" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
