crates/strider/tests/snapshots/v2__ppc32le__memory__array_fill.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "3" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "21" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "25" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "31" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "35" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "38" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "40" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "40" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "44" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "51" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "51" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "51" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "56" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "64" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "77" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "77" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "9" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "80" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
